# flutter_rust

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/yourcompany/flutterrust/: MainActivity.kt
demo_rs/: .gitignore  Cargo.toml  build.sh  create-ndk-standalone.sh
demo_rs/.cargo/: config
demo_rs/src/: lib.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
